Fix spacing in header and modal

--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body {
 .header {
     display: flex;
     justify-content: space-between;
-    padding: 24px 24px 100px 24px;
+    padding: 36px;
 }
 
 .header-logo {
@@ -37,14 +37,13 @@ body {
 .content {
     display: flex;
     justify-content: space-evenly;
-    
 }
 
 .left-content {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 25px;
+    gap: 12px;
 }
 
 button {
@@ -124,10 +123,14 @@ img {
     border-radius: 10px;
     padding: 50px;
     display: flex;
+    align-items: center;
+    gap: 8px;
 }
 
 .modal-container-two {
-    
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
 }
 
 .modal-header {
